--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -330,3 +330,78 @@ series:
         url: https://www.meetup.com/GDGPrague/events/281675919/
         dtstart: 2021-11-26 13:00:00+01:00
         dtend: 2021-11-26 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Nov 9, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gara'
+      og_title: GDG Garage Prague One, Tue, Nov 9, 2021, 6:30 PM
+      image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
+      url: https://www.meetup.com/GDGPrague/events/xqcsqsyccpbmb/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, November 9 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/281931919/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsyccpbmb@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/281931919/
+        dtstart: 2021-11-09 18:30:00+01:00
+        dtend: 2021-11-09 20:30:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Nov 9, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gara'
+      og_title: GDG Garage Prague One, Tue, Nov 9, 2021, 6:30 PM
+      image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
+      url: https://www.meetup.com/GDGPrague/events/xqcsqsyccpblb/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, November 9 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/281824932/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsyccpblb@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/281824932/
+        dtstart: 2021-11-09 18:30:00+01:00
+        dtend: 2021-11-09 20:30:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Nov 23, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gar'
+      og_title: GDG Garage Prague One, Tue, Nov 23, 2021, 6:30 PM
+      image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
+      url: https://www.meetup.com/GDGPrague/events/xqcsqsyccpbfc/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, November 23 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/xqcsqsyccpbfc/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsyccpbfc@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/xqcsqsyccpbfc/
+        dtstart: 2021-11-23 18:30:00+01:00
+        dtend: 2021-11-23 20:30:00+01:00
