--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -448,3 +448,62 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/286180415/
         dtstart: 2022-06-15 18:00:00+02:00
         dtend: 2022-06-15 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Jun 8, 6:00 PM  CEST: **Join the first Productboard Backend Meetup in Brno!**
+
+
+        **About this event**
+
+        Join us for our in-person meetup at Impact Hub Brno! We’re excited to host **our first Backend'
+      og_title: Backend Meetup | BRNO, Wed, Jun 8, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/productboard-meetups/events/286390582/
+      ical:
+        summary: Backend Meetup | BRNO
+        description: 'Productboard Meetups
+
+          Wednesday, June 8 at 6:00 PM
+
+
+          **Join the first Productboard Backend Meetup in Brno!** **About this event**Join us for our in-person meetup at Impact Hub Brno! We’re excited to host...
+
+
+          https://www.meetup.com/productboard-meetups/events/286390582/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286390582@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286390582/
+        dtstart: 2022-06-08 18:00:00+02:00
+        dtend: 2022-06-08 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jun 21, 6:00 PM  CEST: **Productboard''s first Data Meetup is here!**
+
+
+        ## About this event
+
+
+        During the pandemic, we moved into new offices, which have already been named Best Startup Office of the'
+      og_title: Data Meetup | PRG, Tue, Jun 21, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/productboard-meetups/events/286390674/
+      ical:
+        summary: Data Meetup | PRG
+        description: 'Productboard Meetups
+
+          Tuesday, June 21 at 6:00 PM
+
+
+          **Productboard''s first Data Meetup is here!** ## About this event During the pandemic, we moved into new offices, which have already been named Best S...
+
+
+          https://www.meetup.com/productboard-meetups/events/286390674/'
+        location: Productboard (Boudníkova 2506/3, Praha 8-Libeň, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286390674@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286390674/
+        dtstart: 2022-06-21 18:00:00+02:00
+        dtend: 2022-06-21 21:00:00+02:00
