--- a/data/sources/prague-dotnet-meetup.yaml
+++ b/data/sources/prague-dotnet-meetup.yaml
@@ -7191,3 +7191,51 @@ series:
         url: https://www.meetup.com/prague-net-meetup/events/280482935/
         dtstart: 2021-09-09 17:30:00+02:00
         dtend: 2021-09-09 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jun 21, 6:00 PM  CEST: Come and see what is planned for the next .NET release scheduled to be available later this year. We’ll go over small and big features that are available in the latest prev'
+      og_title: Sneak Peek at .NET 7, Tue, Jun 21, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/prague-net-meetup/events/286539701/
+      ical:
+        summary: Sneak Peek at .NET 7
+        description: 'Dotnet Days Meetup
+
+          Tuesday, June 21 at 6:00 PM
+
+
+          Come and see what is planned for the next .NET release scheduled to be available later this year. We’ll go over small and big features that are availa...
+
+
+          https://www.meetup.com/prague-net-meetup/events/286539701/'
+        location: Impact Hub Praha D10 (Drtinova 557/10, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286539701@meetup.com
+        url: https://www.meetup.com/prague-net-meetup/events/286539701/
+        dtstart: 2022-06-21 18:00:00+02:00
+        dtend: 2022-06-21 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Blazor - frontend framework for backend developers?
+        description: 'Dotnet Days Meetup
+
+          Wednesday, June 8 at 6:00 PM
+
+
+          **Blazor** is a new SPA framework you might have heard about. Let''s share some experience from using it in a few enterprise applications, one of them ...
+
+
+          https://www.meetup.com/prague-net-meetup/events/286236089/'
+        location: Impact Hub Praha D10 (Drtinova 557/10, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286236089@meetup.com
+        url: https://www.meetup.com/prague-net-meetup/events/286236089/
+        dtstart: 2022-06-08 18:00:00+02:00
+        dtend: 2022-06-08 20:00:00+02:00
