--- a/data/sources/webexpo.yaml
+++ b/data/sources/webexpo.yaml
@@ -3119,12 +3119,9 @@ series:
         dtstart: 2022-06-10 10:00:00+02:00
         dtend: 2022-06-12 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Sep 21, 10:00 AM  CEST: WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers, and marketers.
-
-
-        We''re'
-      og_title: WebExpo 2021, Tue, Sep 21, 2021, 10:00 AM   | Meetup
-      url: https://www.meetup.com/webexpo/events/267898993/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: WebExpo 2021
         description: 'WebExpo
@@ -3135,14 +3132,14 @@ series:
           WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers,...
 
 
-          https://www.meetup.com/WebExpo/events/267898993/'
+          https://www.meetup.com/webexpo/events/267898993/'
         location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_267898993@meetup.com
-        url: https://www.meetup.com/WebExpo/events/267898993/
+        url: https://www.meetup.com/webexpo/events/267898993/
         dtstart: 2021-09-21 10:00:00+02:00
         dtend: 2021-09-23 18:00:00+02:00
   - meetupcom:
@@ -3848,12 +3845,9 @@ series:
         dtstart: 2021-09-21 10:00:00+02:00
         dtend: 2021-09-23 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Fri, Jun 10, 10:00 AM  CEST: WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers, and marketers.
-
-
-        We''re'
-      og_title: WebExpo 2022, Fri, Jun 10, 2022, 10:00 AM   | Meetup
-      url: https://www.meetup.com/webexpo/events/285984047/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: WebExpo 2022
         description: 'WebExpo
@@ -3864,14 +3858,17 @@ series:
           WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers,...
 
 
-          https://www.meetup.com/WebExpo/events/285984047/'
+          Price: 424.00 EUR
+
+
+          https://www.meetup.com/webexpo/events/285984047/'
         location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_285984047@meetup.com
-        url: https://www.meetup.com/WebExpo/events/285984047/
+        url: https://www.meetup.com/webexpo/events/285984047/
         dtstart: 2022-06-10 10:00:00+02:00
         dtend: 2022-06-12 18:00:00+02:00
   - meetupcom:
@@ -4981,6 +4978,54 @@ series:
         url: https://www.meetup.com/webexpo/events/267898993/
         dtstart: 2021-09-21 10:00:00+02:00
         dtend: 2021-09-23 18:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: WebExpo 2019
+        description: 'WebExpo
+
+          Friday, September 20 at 9:45 AM
+
+
+          We are the web event of the year! The best conference for devs, UX professionals, designers, and marketers to meet up and share their experiences. We''...
+
+
+          https://www.meetup.com/webexpo/events/263721184/'
+        location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_263721184@meetup.com
+        url: https://www.meetup.com/webexpo/events/263721184/
+        dtstart: 2019-09-20 09:45:00+02:00
+        dtend: 2019-09-22 18:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Get professional help before your obsessions take over!
+        description: 'WebExpo
+
+          Friday, September 23 at 9:00 PM
+
+
+          2 days all about the web: 70 speakers, 2000 people from the industry and meetings IRL
+
+
+          https://www.meetup.com/webexpo/events/232703682/'
+        location: Lucerna (Vodičkova 36, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_232703682@meetup.com
+        url: https://www.meetup.com/webexpo/events/232703682/
+        dtstart: 2016-09-23 21:00:00+02:00
+        dtend: 2016-09-24 23:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
